--- a/VideoLibrary.Engine/VideoLibrary.Engine.csproj
+++ b/VideoLibrary.Engine/VideoLibrary.Engine.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
+    <PackageReference Include="WinInsider.System.Net.Http.Formatting" Version="1.0.5" />
   </ItemGroup>
 
   <ItemGroup>
